# Django_app

./: .env.template  .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yaml  nginx.conf  nginx.conf.template  options-ssl-nginx.conf  pyproject.toml  requirements.txt
conf.d/: default.conf
mysite/: db.sqlite3
mysite/blogapp/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category_alter_author_name.py  0003_tag.py  0004_article.py  0005_article_author_article_category_article_tags.py
mysite/blogapp/templates/blogapp/: article_form.html  article_list.html
mysite/database/: db.sqlite3
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  login.html  logout_confirm.html  (+4 more)
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: throttling_middleware.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  shopapp-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0002_initial.py  0003_order.py  0004_order_user.py  0005_order_product.py  0006_product_created_by.py  0007_alter_product_created_by.py  0008_alter_order_user.py  0009_alter_order_options_alter_product_options.py
nginx/: nginx.conf.template
nginx/conf.d/: default.conf
(+23 files in other folders)
