[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["aleksei_davydenkov <alexey@davydenkov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.6"
pillow = "^10.4.0"
gunicorn = "^22.0.0"
sentry-sdk = "^2.9.0"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = "false"